--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Gravel
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Assets/Maps_All/Map_Testing.Map_Testing
 GameDefaultMap=/Game/Assets/Maps_All/Map_Testing.Map_Testing
 TransitionMap=
 bUseSplitscreen=True
