--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,6 +21,7 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.DefaultFeature.MotionBlur=False
+r.CustomDepth=3
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
