Made Test arena main and added dev restart and quit

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=Gravel
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Assets/Maps_All/Map_Testing.Map_Testing
-GameDefaultMap=/Game/Assets/Maps_All/Map_Testing.Map_Testing
+GameDefaultMap=/Game/Assets/Maps_All/Maps_Dev/Map_TestArena.Map_TestArena
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
