--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,7 +11,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="C:/Users/ajdin/OneDrive/Documents/Unreal Projects/Builds")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -96,13 +96,15 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="/Game/Assets/Maps_All/Map_Testing")
++MapsToCook=(FilePath="/Game/Assets/Maps_All/Map_MainMenu")
++MapsToCook=(FilePath="/Game/Assets/Maps_All/Maps_Dev/Map_Arena1")
++MapsToCook=(FilePath="/Game/Assets/Maps_All/Maps_Dev/Map_BossArena")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
 PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=()
+PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
