--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Gravel
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Assets/Maps_All/Maps_Dev/Map_Arena1.Map_Arena1
+EditorStartupMap=/Game/Assets/Maps_All/Map_MainMenu.Map_MainMenu
 GameDefaultMap=/Game/Assets/Maps_All/Map_MainMenu.Map_MainMenu
 TransitionMap=
 bUseSplitscreen=True
