--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,7 +11,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="C:/Users/ajdin/OneDrive/Documents/Unreal Projects/Builds")
+StagingDirectory=(Path="C:/Users/emilx/Documents/Yrgo/Unreal Projects/Builds")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -99,12 +99,13 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Assets/Maps_All/Map_MainMenu")
 +MapsToCook=(FilePath="/Game/Assets/Maps_All/Maps_Dev/Map_Arena1")
 +MapsToCook=(FilePath="/Game/Assets/Maps_All/Maps_Dev/Map_BossArena")
++MapsToCook=(FilePath="/Game/Assets/Maps_All/Map_Tutorial")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
-PerPlatformBuildConfig=()
+PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
