--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,7 +11,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="C:/Users/emilx/Documents/Yrgo/Unreal Projects/Builds")
+StagingDirectory=(Path="C:/Users/ajdin/OneDrive/Documents/Unreal Projects/Builds/Windows")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -97,9 +97,7 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Assets/Maps_All/Map_MainMenu")
-+MapsToCook=(FilePath="/Game/Assets/Maps_All/Maps_Dev/Map_Arena1")
-+MapsToCook=(FilePath="/Game/Assets/Maps_All/Maps_Dev/Map_BossArena")
-+MapsToCook=(FilePath="/Game/Assets/Maps_All/Map_Tutorial")
++MapsToCook=(FilePath="/Game/Assets/Maps_All/TutorialLevels/Start-area")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
