Added scenes to array

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7515AC4047EED4AE7E4130AC0C98D343
-ProjectName=Third Person BP Game Template
+ProjectName=Flesh & Stone
+CompanyName=Mashtown Studios
 
 [StartupActions]
 bAddPacks=True
@@ -11,7 +12,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="C:/Users/ajdin/OneDrive/Documents/Unreal Projects/Builds/Windows")
+StagingDirectory=(Path="C:/Users/emilx/Documents/Yrgo/Unreal Projects/Builds")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -98,6 +99,9 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Assets/Maps_All/Map_MainMenu")
 +MapsToCook=(FilePath="/Game/Assets/Maps_All/TutorialLevels/Start-area")
++MapsToCook=(FilePath="/Game/Assets/Maps_All/TutorialLevels/Part-1")
++MapsToCook=(FilePath="/Game/Assets/Maps_All/TutorialLevels/Part-2")
++MapsToCook=(FilePath="/Game/Assets/Maps_All/TutorialLevels/Part-3")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
